crates/squealy-macros/tests/compile_fail/column_type_requires_one_field.rs
use squealy::*;

#[derive(ColumnType)]
struct CompositeId(i32, i32);

fn main() {}
